--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.2.2
-Flask-JWT-Extended==4.4.3
-flask-mongoengine==1.0.0
-pytz==2023.1
-python-dotenv==0.21.0
-mongoengine==0.24.1
-boto3==1.24.12
+Flask
+Flask-JWT-Extended
+flask-mongoengine
+pytz
+python-dotenv
+mongoengine
+boto3
