Migrated to fast api
now we have routes folder
cleaned the imports
changed the middleware
changed the req.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-Flask
-Flask-JWT-Extended
-flask-mongoengine
+fastapi
+uvicorn
+python-multipart
+mongoengine
 pytz
 python-dotenv
-mongoengine
-boto3
+bson
+passlib
 werkzeug
+python-jose
