--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,23 @@
 {
-    "builds": [
-	{
-	    "src": "main.py",
-	    "use": "@vercel/python"
-	}
-    ],
-    "routes": [
-	{
-	    "src":"/(.*)",
-	    "dest": "main.py"
-	}
-    ],
-    "env": {
-	"APP_MODULE": "main:app"
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/node(.*)",
+      "dest": "index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "main.py"
+    }
+  ]
 }
